--- a/app/globals.css
+++ b/app/globals.css
@@ -43,16 +43,34 @@
   --radius-xl: calc(var(--radius) + 4px);
 }
 
+.bg-root {
+  background: var(--oro-bg);
+  background-size: cover;
+  background-position: center;
+}
+
+/* Target the UserButton component specifically */
+.user-profile-large [data-stack-component="user-button"] {
+  transform: scale(1.3);
+}
+
+/* Or if that doesn't work, try targeting common avatar classes */
+.user-profile-large img,
+.user-profile-large [role="button"] {
+  width: 48px !important;
+  height: 48px !important;
+}
+
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
+  --oro-bg: linear-gradient(to top, #02070C 0%, #0D141C 48%, #1F3043 100%);
   --foreground: oklch(0.129 0.042 264.695);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.129 0.042 264.695);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.129 0.042 264.695);
   --primary: oklch(17.972% 0.0978 296.655);
-  --primary-foreground: oklch(100% 0.00011 271.152);
+  --primary-foreground: oklch(0% 0.00011 271.152);
   --secondary: oklch(0.968 0.007 247.896);
   --secondary-foreground: oklch(0.208 0.042 265.755);
   --muted: oklch(0.968 0.007 247.896);
@@ -116,7 +134,9 @@
   * {
     @apply border-border outline-ring/50;
   }
-  body {
-    @apply bg-background text-foreground;
-  }
+
+}
+html, body, #__next, #root {
+  height: 100%;
+  width: 100%;
 }
